# nomad-sample-cluster

./: README.md
cluster/: Dockerfile.fluentd  cluster-api.nomad.hcl  cluster-efk.nomad.hcl  cluster-metrics.nomad.hcl  cluster.tf  fluent.conf.tpl  grafana-dashboard-prototype-service.json.tpl  grafana-dashboard-provider.yml.tpl  grafana-datasource.yml.tpl  kibana.yml.tpl  krakend.json.tpl  prometheus.yml.tpl
prototype-service/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local
prototype-service/config/: application.toml
prototype-service/src/: main.rs
prototype-service/src/api/: echo.rs  mod.rs  telemetry.rs
prototype-service/src/application/: config.rs  logger.rs  mod.rs  telemetry.rs
