[package]
name = "prototype-service"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
log = "0.4.17"
env_logger = "0.9.3"
actix-web = "4.2.1"
prometheus = "0.13.3"
mime = "0.3.16"
